boreal-daemon/tree-sitter-boreal/test/corpus/expressions.txt
================================================================================
Expressions
================================================================================

module Expressions where

expr x = x * 2 + 3

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name))
  (top_level_declarations
    (function_declaration
      (function_head
        (identifier)
        (identifier))
      (function_body
        (simple_expression
          (binary_operation
            (simple_expression
              (binary_operation
                (simple_expression
                  (identifier))
                (simple_expression
                  (identifier))))
            (simple_expression
              (identifier))))))))
